Update 2 circle land.html

--- a/2 circle land.html
+++ b/2 circle land.html
@@ -37,11 +37,11 @@
 <div class=progress-fill id=progressFill></div>
 </div>
 </div>
-<div id=home-button>
+<a id="home-button" href="index.html#list-section">
 <svg viewBox="0 0 24 24">
 <path d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"/>
 </svg>
-</div>
+</a>
 <div class=control-buttons>
 <button class=control-button id=themeBtn>
 <span>🌙</span>
