--- a/3 click wave.html
+++ b/3 click wave.html
@@ -23,9 +23,9 @@ body{background:#000;overflow:hidden;font-family:Arial,sans-serif;height:100vh;w
 </style>
 </head>
 <body>
-<div id="home-button" onclick="goHome()">
+<a id="home-button" href="index.html#list-section">
   <svg viewBox="0 0 24 24"><path d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"/></svg>
-</div>
+</a>
 <div id="fabricMode" class="fabric-mode">
   <canvas id="fabricCanvas"></canvas>
   <div class="instruction">클릭하여 찢어진 천의 파동을 생성하세요</div>
@@ -35,11 +35,7 @@ let fabricAnimationId;
 function goHome(){
   try{
     console.log('홈 버튼 클릭됨!');
-    if(window.location.protocol==='file:'){
-      window.location.href='./index.html#list-section';
-    }else{
-      window.location.href='/index.html#list-section';
-    }
+    window.location.href = 'index.html#list-section';
   }catch(error){
     console.error('홈 페이지 이동 오류:',error);
     if(window.location.protocol==='file:'){
@@ -289,7 +285,7 @@ function initFabricMode(){
 }
 window.addEventListener('load',()=>{initFabricMode();});
 document.addEventListener('keydown',e=>{
-  if(e.key==='h'||e.key==='H'||e.key==='Home')goHome();
+  if(e.key==='h'||e.key==='H'||e.key==='Home')window.location.href='index.html#list-section';
 });
 </script>
 </body>
